# erc6551crunch

./: Cargo.toml  LICENCE  README.md
src/: gpu.rs  lib.rs  main.rs
